--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -120,6 +120,30 @@
   extra = {The API used to control SUMO simulations in real time}
 }
 
+\DeclareAcronym{cop}{
+  short               = COP,
+  long                = Control Optimization Problem,
+  short-plural-form   = COPs,
+  long-plural-form    = Control Optimization Problems,
+  extra               = {A formal mathematical formulation used to compute optimal control inputs by minimizing a cost function subject to dynamic system constraints}
+}
+
+\DeclareAcronym{bev}{
+  short               = BEV,
+  long                = battery-electric vehicle,
+  short-plural-form   = BEVs,
+  long-plural-form    = battery-electric vehicles,
+  extra               = {An electric vehicle powered solely by on-board batteries, producing zero tailpipe emissions}
+}
+
+\DeclareAcronym{cv}{
+  short               = CV,
+  long                = Connected Vehicle,
+  short-plural-form  = CVs,
+  long-plural-form   = Connected Vehicles,
+  extra               = {A vehicle equipped with wireless communication technology to exchange information with infrastructure and other vehicles}
+}
+
 \DeclareAcronym{rq}{
   short               = RQ,
   long                = Research Question,
@@ -158,6 +182,14 @@
   short-plural-form   = ITS,
   long-plural-form    = Intelligent Transportation Systems,
   extra               = {Frameworks and technologies for integrating communication, control, and data exchange across transportation networks}
+}
+
+\DeclareAcronym{cacc}{
+  short               = CACC,
+  long                = Cooperative Adaptive Cruise Control,
+  short-plural-form  = CACC systems,
+  long-plural-form   = Cooperative Adaptive Cruise Control systems,
+  extra               = {An extension of Adaptive Cruise Control (ACC) that uses vehicle-to-vehicle (V2V) communication to coordinate longitudinal behavior among connected vehicles, improving traffic stability and fuel efficiency}
 }
 
 \DeclareAcronym{v2i}{
@@ -247,6 +279,22 @@
   short-plural-form  = PHEM versions,
   long-plural-form   = Passenger Car and Heavy‐Duty Emission Model versions,
   extra              = {A physics-based emission model developed for detailed simulation of vehicle emissions under varying driving conditions}
+}
+
+\DeclareAcronym{mpc}{
+  short               = MPC,
+  long                = Model Predictive Control,
+  short-plural-form   = MPC schemes,
+  long-plural-form    = Model Predictive Control schemes,
+  extra               = {An advanced control strategy that solves an optimization problem over a prediction horizon to compute control inputs, frequently used in constrained and multi-variable control systems}
+}
+
+\DeclareAcronym{dddp}{
+  short               = DDDP,
+  long                = Discrete Differential Dynamic Programming,
+  short-plural-form   = DDDP methods,
+  long-plural-form    = Discrete Differential Dynamic Programming methods,
+  extra               = {An optimization-based trajectory planning method that solves discrete-time optimal control problems using second-order value function approximations}
 }
 
 \DeclareAcronym{adas}{
