--- a/references.bib
+++ b/references.bib
@@ -1,5 +1,3 @@
-% This file was created with Citavi 6.3.0.0
- 
 @article{COPPOLA2022103455,
 title = {An Integrated Simulation Environment to test the effectiveness of GLOSA services under different working conditions},
 journal = {Transportation Research Part C: Emerging Technologies},
@@ -106,7 +104,8 @@ keywords = {Integrated testing environment, Green Light Optimal Speed Advisory, 
            year = {2018},
         journal = {IEEE Intelligent Transportation Systems Conference (ITSC)},
        keywords = {traffic simulation, modelling, optimization},
-            url = {https://elib.dlr.de/124092/}
+            url = {https://elib.dlr.de/124092/},
+pages = {n.p.},
  }
 
 @misc{TraCIDocs2024,
@@ -116,10 +115,11 @@ keywords = {Integrated testing environment, Green Light Optimal Speed Advisory, 
   howpublished = {\url{https://sumo.dlr.de/docs/TraCI.html}},
 }
 
-@inbook{Koutsopoulos2005Microsim,
+@inproceedings{Koutsopoulos2005Microsim,
 author = {Toledo, Tomer and Koutsopoulos, Haris and Ben-Akiva, Moshe and Jha, Mithilesh},
 year = {2005},
 month = {01},
+booktitle = {Simulation Approaches in Transportation Analysis},
 pages = {99-130},
 title = {Microscopic Traffic Simulation: Models and Application},
 volume = {31},
@@ -162,7 +162,7 @@ publisher = {Springer, Boston},
 
 @INPROCEEDINGS{varga2024systematic,
   author={Varga, Balázs and Lulić, Zoran and Tettamanti, Tamás},
-  booktitle={2024 IEEE International Conference on Electrical Systems for Aircraft, Railway, Ship Propulsion and Road Vehicles & International Transportation Electrification Conference (ESARS-ITEC)}, 
+  booktitle={2024 IEEE International Conference on Electrical Systems for Aircraft, Railway, Ship Propulsion and Road Vehicles and International Transportation Electrification Conference (ESARS-ITEC)}, 
   title={Systematic Error Correction of SUMO Traffic Simulator's HBEFA Vehicle Emission Model}, 
   year={2024},
   volume={},
@@ -195,8 +195,7 @@ title     = {TraCI4Matlab: Re-engineering the Python implementation of the TraCI
 booktitle = {SUMO2014 -- Modeling Mobility with Open Data},
 year = {2014},
 month = {05},
-pages = {},
-title = {TraCI4Matlab: Re-engineering the Python implementation of the TraCI interface.}
+pages = {n.p.},
 }
 
 @article{Kesting_2008,
@@ -482,19 +481,6 @@ journal = {Environmental Research Letters},
 doi = {10.1088/1748-9326/ac8b21}
 }
 
-@Article{RealTimeGLOSA2020,
-AUTHOR = {Simchon, Lior and Rabinovici, Raul},
-TITLE = {Real-Time Implementation of Green Light Optimal Speed Advisory for Electric Vehicles},
-JOURNAL = {Vehicles},
-VOLUME = {2},
-YEAR = {2020},
-NUMBER = {1},
-PAGES = {35--54},
-URL = {https://www.mdpi.com/2624-8921/2/1/3},
-ISSN = {2624-8921},
-DOI = {10.3390/vehicles2010003}
-}
-
 @techreport{ETSI1027242012,
   author       = {{ETSI}},
   title        = {{Intelligent Transport Systems (ITS); Harmonized Channel Specifications for Intelligent Transport Systems operating in the 5 GHz frequency band}},
@@ -515,7 +501,8 @@ DOI = {10.3390/vehicles2010003}
   year         = {2022},
   month        = feb,
   url          = {https://engineering.virginia.edu/sites/default/files/Connected-Vehicle-PFS/Resources/CV%20PFS%20SPaT%20Fact%20Sheet%2003072022.pdf},
-  note         = {Source: USDOT; February 2022}
+  note         = {Source: USDOT; February 2022},
+  number = {n.d.},
 }
 
 @Article{BusesGLOSA2022,
@@ -567,7 +554,7 @@ doi = {10.13140/RG.2.2.29780.60806}
 
 @INPROCEEDINGS{Gao2016,
   author={Gao, Jason H. and Peh, Li-Shiuan},
-  booktitle={2016 Design, Automation & Test in Europe Conference & Exhibition (DATE)}, 
+  booktitle={2016 Design, Automation and Test in Europe Conference and Exhibition (DATE)}, 
   title={Automotive V2X on phones: Enabling next-generation mobile ITS apps}, 
   year={2016},
   volume={},
@@ -585,7 +572,8 @@ doi = {10.13140/RG.2.2.29780.60806}
   month        = jun,
   day          = {1},
   url          = {https://rosap.ntl.bts.gov/view/dot/80039},
-  note         = {Corporate contributor: Florida Department of Transportation}
+  note         = {Corporate contributor: Florida Department of Transportation},
+  number = {n.d.},
 }
 
 @Article{Vignarca2023,
@@ -609,19 +597,9 @@ DOI = {10.3390/s23156888}
   volume    = {13},
   number    = {1},
   year      = {2019},
-  url       = {https://api.semanticscholar.org/CorpusID:150070813}
+  url       = {https://api.semanticscholar.org/CorpusID:150070813},
+pages = {n.p.},
 }
-
-@INPROCEEDINGS{Katsaros2011,
-  author={Katsaros, Konstantinos and Kernchen, Ralf and Dianati, Mehrdad and Rieck, David},
-  booktitle={2011 7th International Wireless Communications and Mobile Computing Conference}, 
-  title={Performance study of a Green Light Optimized Speed Advisory (GLOSA) application using an integrated cooperative ITS simulation platform}, 
-  year={2011},
-  volume={},
-  number={},
-  pages={918-923},
-  keywords={Vehicles;Fuels;Roads;Measurement;Acceleration;Data models;IEEE standards;vehicular communications;traffic light advisory;fuel consumption;traffic congestion},
-  doi={10.1109/IWCMC.2011.5982524}}
 
 @INPROCEEDINGS{Fayazi2017,
   author={Fayazi, S. Alireza and Vahidi, Ardalan and Luckow, Andre},
@@ -656,7 +634,7 @@ DOI = {10.3390/s23156888}
   keywords={Biological system modeling;Vehicle dynamics;Trajectory;Optimization;Fuels;Safety;Heuristic algorithms;Mixed-integer linear programming;dynamic traffic assignment;optimal speed advisory;bi-level control strategy;car following model;lane-changing model;connected and autonomous vehicles},
   doi={10.1109/TITS.2021.3056696}}
 
-@Article{Simchon2020,
+@Article{RealTimeGLOSA2020,
 AUTHOR = {Simchon, Lior and Rabinovici, Raul},
 TITLE = {Real-Time Implementation of Green Light Optimal Speed Advisory for Electric Vehicles},
 JOURNAL = {Vehicles},
@@ -666,20 +644,8 @@ NUMBER = {1},
 PAGES = {35--54},
 URL = {https://www.mdpi.com/2624-8921/2/1/3},
 ISSN = {2624-8921},
-ABSTRACT = {Intelligent Transportation Systems (ITS), such as Green Light Optimal Speed Advisory (GLOSA) systems, can be used to reduce the energy consumption in modern vehicles. In particular, GLOSA systems provide driving strategies that can decrease both energy consumption and travel time. In this paper, we present a new method to calculate the optimal driving speeds based on traffic light data. To this end, a detailed formulation for the optimization problem is presented for a multi-segment route, based on an electric vehicle (EV) and traffic light models in an urban environment. Since this formulation results in a nonconvex optimization problem, a relaxation procedure is applied with a low calculation time. By using this procedure, a dynamic real-time speed advisory algorithm is developed. Numerical simulations showed improved performance over benchmark techniques. In particular, the proposed Dynamic-GLOSA solution’s performance was shown to be very close to that with a brute-force optimal solution but with a much shorter calculation time and has significant potential for energy saving.},
 DOI = {10.3390/vehicles2010003}
 }
-
-@INPROCEEDINGS{Seredynski2013,
-  author={Seredynski, Marcin and Mazurczyk, Wojciech and Khadraoui, Djamel},
-  booktitle={2013 IEEE International Symposium on Parallel & Distributed Processing, Workshops and Phd Forum}, 
-  title={Multi-segment Green Light Optimal Speed Advisory}, 
-  year={2013},
-  volume={},
-  number={},
-  pages={459-465},
-  keywords={Vehicles;Fuels;Optimization;Schedules;Timing;Roads;Sociology;Traffic lights;GLOSA;Smart City;Optimisation;Genetic Algorithms},
-  doi={10.1109/IPDPSW.2013.157}}
 
 @misc{Zhou2015,
       title={Parsimonious shooting heuristic for trajectory control of connected automated traffic part I: Theoretical analysis with generalized time geography}, 
@@ -762,8 +728,9 @@ doi = {10.2478/ttj-2020-0025}
 @misc{ARCITSP57,
   author       = {{ARC-IT}},
   title        = {Service Package SP 57: Traffic Signal Priority},
-  howpublished = {\url{https://www.arc-it.net/html/servicepackages/sp57.html\?utm_source=chatgpt.com\#tab-8}},
-  note         = {Accessed: 2025-05-25}
+  howpublished = {\url{https://www.arc-it.net/html/servicepackages/sp57.html}},
+  note         = {Accessed: 2025-05-25},
+  year         = {2025},
 }
 
 @article{Mellegard2020,
@@ -927,11 +894,13 @@ doi = {10.1109/ITSC.2013.6728248}
   month        = oct,
   day          = {1},
   number       = {FHWA-JPO-13-113},
-  url          = {/view/dot/3419}
+  url          = {/view/dot/3419},
+note  = {n.p.},
 }
 
-@inbook{Aifadopoulou2019,
+@INPROCEEDINGS{Aifadopoulou2019,
 author = {Ayfantopoulou, Georgia and Bratsas, Charalampos and Koupidis, Kleanthis and Chatzopoulou, Aikaterini and Salanova Grau, Josep Maria and Tzenos, Panagiotis},
+booktitle = {Proceedings of the 4th Conference on Sustainable Urban Mobility (CSUM2018)},
 year = {2019},
 month = {01},
 pages = {181-188},
@@ -984,17 +953,6 @@ author = {Panagiotis Typaldos and Markos Papageorgiou},
 keywords = {GLOSA, Stochastic Dynamic Programming, Discrete Differential Dynamic Programming (DDDP), Differential Dynamic Programming (DDP), Traffic light advisory},
 abstract = {A discrete-time stochastic optimal control problem was recently proposed to address the GLOSA (Green Light Optimal Speed Advisory) problem in cases where the next signal switching time is decided in real time and is therefore uncertain in advance. The corresponding numerical solution via SDP (Stochastic Dynamic Programming) calls for substantial computation time, which excludes problem solution in the vehicle’s on-board computer in real time. In this context, the present paper concentrates on the challenge of developing numerical algorithms to solve efficiently the stochastic GLOSA problem. As a first attempt to overcome the computation time bottleneck, a modified version of Dynamic Programming, known as Discrete Differential Dynamic Programming (DDDP) was recently employed for the numerical solution of the stochastic optimal control problem and was demonstrated to achieve results equivalent to those obtained with the ordinary SDP algorithm, albeit with significantly reduced computation times. After an outline of the DDDP approach, the present work considers a second modified version of Dynamic Programming, known as Differential Dynamic Programming (DDP). For the stochastic GLOSA problem, it is demonstrated that DDP achieves quasi-instantaneous (extremely fast) solutions in terms of CPU times, which allows for the proposed approach to be readily executable online, in an MPC (Model Predictive Control) framework, in the vehicle’s on-board computer. The novel numerical approach is tested and demonstrated by use of realistic examples and is compared to the SDP and DDDP solutions. It should be noted that DDP does not require discretization of variables, hence the obtained solutions may be slightly superior to the standard SDP solutions.}
 }
-
-@INPROCEEDINGS{Seredynski2013,
-  author={Seredynski, Marcin and Dorronsoro, Bernabe and Khadraoui, Djamel},
-  booktitle={16th International IEEE Conference on Intelligent Transportation Systems (ITSC 2013)}, 
-  title={Comparison of Green Light Optimal Speed Advisory approaches}, 
-  year={2013},
-  volume={},
-  number={},
-  pages={2187-2192},
-  keywords={Vehicles;Fuels;Timing;Schedules;Roads;Sociology;Statistics},
-  doi={10.1109/ITSC.2013.6728552}}
 
 @article{Typaldos2021,
 title = {Vehicle-Based Trajectory Specification in Presence of Traffic Lights with Stochastic Switching Times},
