--- a/mandatory/acronyms.tex
+++ b/mandatory/acronyms.tex
@@ -513,3 +513,11 @@
   long-plural-form    = Stochastic Dynamic Programming methods ,
   extra               = {A mathematical approach that incorporates random variables and probability distributions to solve dynamic optimization problems where system parameters or outcomes are subject to uncertainty.}
 }
+
+\DeclareAcronym{hil}{
+  short               = HIL ,
+  long                = hardware-in-the-loop ,
+  short-plural-form   = HIL setups ,
+  long-plural-form    = hardware-in-the-loop setups ,
+  extra               = {A real-time testing methodology that integrates physical hardware components with simulation models in a closed-loop environment.}
+}
