--- a/mandatory/symbols.tex
+++ b/mandatory/symbols.tex
@@ -327,3 +327,15 @@
   description={Corrected time to switch, including safety margin},
   unit={s}
 }
+
+\newglossaryentry{q}{
+  name={\ensuremath{q}},
+  description={Traffic flow rate},
+  unit={\ensuremath{\mathrm{veh}/\mathrm{h}}}
+}
+
+\newglossaryentry{p}{
+  name={\ensuremath{p}},
+  description={Penetration rate of equipped vehicles in \%},
+  unit={}
+}
